--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "passport-http": "^0.3.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^5.0.1"
+    "passport-local-mongoose": "^5.0.1",
+    "stripe": "^7.9.0"
   }
 }
