--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "custom-env": "^1.0.2",
     "debug": "~2.6.9",
+    "dotenv": "^8.1.0",
     "email-existence": "^0.1.6",
     "email-validator": "^2.0.4",
     "express": "~4.16.1",
@@ -30,12 +32,16 @@
     "morgan": "~1.9.1",
     "mssql": "^5.1.0",
     "nodemailer": "^6.2.1",
+    "nodemailer-smtp-transport": "^2.7.4",
     "nodemon": "^1.19.1",
+    "oauth2-server": "^3.0.1",
     "passport": "^0.4.0",
     "passport-http": "^0.3.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
+    "sendmail": "^1.6.1",
+    "smtp": "^0.1.4",
     "stripe": "^7.9.0"
   }
 }
